Made a new layout template which contains the core code for the webpages such as the title. This layout features a content block in the body which will substitute any specific information from the webpage files such as home. This change includes making the webpage files extend from layout and then putting the necessary html into that block. This change will make editing specific webpages much easier without having the make larger changes to each individual file and instead just make it to the file they extend from. I made sure that this didn't break the program by running the website.

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
     <h1>Home Page</h1>
-    <p>This is where stock information will be</p>
-</body>
-</html>
+    <p>This is where stock information will be.</p>
+{% endblock content %}
