Added some descriptor text for the homepage. This just sets up what information I will put on this page.

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>Home Page</h1>
-    <p>This is where stock information will be.</p>
+    <p>Information on this page will be a welcoming message and an
+        explanation for this project. </p>
+    <p>It will include all information about
+    where the stock information is from (yahoo finance).</p>
 {% endblock content %}
