Changed the colours of my website for nice appealing theme of 4 colours. Added some css to make a top stock feature which i will configure in the future to display the top gaining stocks on the main page.

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>Home Page</h1>
-    <p>Information on this page will be a welcoming message and an
-        explanation for this project. </p>
-    <p>It will include all information about
-    where the stock information is from (yahoo finance).</p>
+    <p>Information on this page will be a welcoming message and an explanation for this project. </p>
+    <p>It will include all information about where the stock information is from (yahoo finance) or the alpha vanguard API.</p>
+    <h2>Top Gainers:</h2>
+    <p class="top-gainers">GME: +12.09%</p>
+    <p class="top-gainers">MVIS: +5.82%</p>
 {% endblock content %}
