--- a/app/static/main.css
+++ b/app/static/main.css
@@ -5,11 +5,11 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #000000;
+  color: #141414;
 }
 
 .bg-steel {
-  background-color: #000000;
+  background-color: #141414;
 }
 
 .site-header .navbar-nav .nav-link {
@@ -17,7 +17,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .site-header .navbar-nav .nav-link:hover {
-  color: #00FF00;
+  color: #00FF79;
 }
 
 .site-header .navbar-nav .nav-link.active {
@@ -27,7 +27,20 @@ h1, h2, h3, h4, h5, h6 {
 .content-section {
   background: #ffffff;
   padding: 10px 20px;
-  border: 1px solid #000000;
+  border: 1px solid #141414;
   border-radius: 3px;
   margin-bottom: 20px;
 }
+
+.top-gainers{
+  display:inline-block;
+  background: #00FF79;
+  width: 140px;
+  height: 50px;
+  padding: 10px;
+  border: 2px solid;
+  border-color: #141414;
+  margin: 0;
+}
+
+"#FF2100 - Red"
