--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
      <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -38,16 +38,6 @@
         </div>
       </nav>
     </header>
-
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
 
     <div class="container">
         {% block content %}{% endblock %}
